# qt6_android_cmake_template

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
cmake/: android-opencv-settings.cmake  external-build.cmake
docs/: AndroidQtDeploy.md  Doxyfile
scripts/: deploy_android.sh
src/: CMakeLists.txt  enhanced_engine.cpp  enhanced_engine.hpp  main.cpp
src/qml/: MainWindow.qml  main_hot_reload.qml  qml.qrc  reload_window.qml
